[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kursh-field-change-detection"
version = "0.1.0"
description = "Standalone sample agricultural field raster change processor."
requires-python = ">=3.10"
dependencies = [
    "geopandas>=0.14",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.0",
    "pillow>=10.0",
    "pyogrio>=0.7",
    "rasterio>=1.4",
    "shapely>=2.0",
]
